API: Polish Web Auth, update OpenAPI spec
